--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             background-repeat: no-repeat;
             position: relative;
             animation-name: sun;
-            animation-duration:1s;
+            animation-duration:3.0s;
             animation-timing-function: linear;
             animation-iteration-count:infinite;
         }
-        @keyframes sun1{
+        @keyframes sun{
             0%{
                 transform:rotateZ(0deg);
             }
@@ -39,13 +39,12 @@
             border-radius: 50px;
             right: -100px;
             bottom: 27px;
-
-           
+            transform-origin: -100px center ;
             background-image: url('./image/meraury.jpg');
             background-repeat: no-repeat;
             position:absolute;
             animation-name: mercury;
-            animation-duration:1s;
+            animation-duration:2s;
             animation-timing-function: linear;
             animation-iteration-count:infinite;
             animation-play-state:running;
@@ -70,10 +69,10 @@
             background-repeat: no-repeat;
             position:absolute;
             animation-name: venus;
-            animation-duration:2s;
+            animation-duration:2.5s;
             animation-timing-function: linear;
             animation-iteration-count:infinite;
-            animation-play-state:paused;
+            animation-play-state:running;
 
         }
         @keyframes venus{
@@ -95,10 +94,10 @@
             background-repeat: no-repeat;
             position:absolute;
             animation-name: earth;
-            animation-duration:2s;
+            animation-duration:2.7s;
             animation-timing-function: linear;
             animation-iteration-count:infinite;
-            animation-play-state:paused;
+            animation-play-state:running;
 
         }
         @keyframes earth{
@@ -143,10 +142,10 @@
         background-image:url('./image/mars.jpg') ;
         position:absolute;
         animation-name:mars;
-        animation-duration: 1s;
+        animation-duration: 2.9s;
         animation-timing-function:linear;
         animation-iteration-count: infinite;
-        animation-play-state: paused;
+        animation-play-state: running;
       }
 
 @keyframes mars{
@@ -154,7 +153,7 @@
 transform:rotateZ(0deg);
     }
     100%{
-transform:rotateZ(300deg);
+transform:rotateZ(360deg);
     }
 }
 
