--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     </head>
     <style>
         body{
+        
            background-image: url('./image/backgroundImage.jpg');
            background-size:cover;
+           height: 100vh;
         }
         .sun{
             height: 100px;
